[package]
name = "context_attr"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Attribute macro to add context to all errors a function produces"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

eyre = { version = "0.6.12", optional = true }

[features]
eyre = ["dep:eyre"]
full = [
  "eyre",
]

[lib]
proc-macro = true
